k8s/apps/trivy-dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivy-dashboard
  namespace: trivy-dashboard
  labels:
    app.kubernetes.io/name: trivy-dashboard
    app.kubernetes.io/part-of: trivy-operator
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: trivy-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trivy-dashboard
        app.kubernetes.io/part-of: trivy-operator
        app.kubernetes.io/component: web
    spec:
      serviceAccountName: trivy-dashboard
      containers:
        - name: trivy-dashboard
          image: ghcr.io/raoulx24/trivy-operator-dashboard:1.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8900
              protocol: TCP
          startupProbe:
            httpGet:
              path: /healthz/ready
              port: http
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: http
            periodSeconds: 30
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 384Mi
      volumes:
        - name: tmp-volume
          emptyDir:
            sizeLimit: 1024Mi
